update of project

--- a/codes/hospital-main.html
+++ b/codes/hospital-main.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Novaluxe Care</title>
+    <title>Novaluxe</title>
     <link rel="stylesheet" href="hospital-main.css" />
     <link
       rel="stylesheet"
@@ -12,46 +12,177 @@
   </head>
   <body>
     <header>
-      <section class="head-section">
-        <div class="head-section-div">
-          <div class="header-left">
-            <img src="../code-pic/logo-icon.png" alt="logo" id="header-logo" />
-            <p class="header-name">Novaluxe Care</p>
+      <!-- upper header -->
+
+      <div class="upper-header-box-div">
+        <p class="hospital-name">NOVA<span id="name-for-color">LUXE</span></p>
+        <ul class="detail-list">
+          <li class="detail">
+            <img src="../svg/call.svg" alt="call" class="detail-logo" />
+            <p class="detail-head">Emergency</p>
+            <p class="detail-info">+9779800000000</p>
+          </li>
+          <li class="detail">
+            <img src="../svg/time.svg" alt="call" class="detail-logo" />
+            <p class="detail-head">Work Hour</p>
+            <p class="detail-info">9:00-20:00 everyday</p>
+          </li>
+          <li class="detail">
+            <img src="../svg/location.svg" alt="call" class="detail-logo" />
+            <p class="detail-head">Location</p>
+            <p class="detail-info">chabahil</p>
+          </li>
+        </ul>
+      </div>
+
+      <!-- Lower header -->
+
+      <div class="nav-bar">
+        <ul class="nav-bar-list">
+          <li class="nav-bar-items"><span class="home">Home</span></li>
+          <li class="nav-bar-items">About Us</li>
+          <li class="nav-bar-items">Services</li>
+          <li class="nav-bar-items">Doctors</li>
+          <li class="nav-bar-items">News</li>
+          <li class="nav-bar-items">Contact</li>
+        </ul>
+        <div class="nav-bar-right">
+          <img src="../svg/search.png" alt="" class="nav-bar-search" />
+          <p class="appointment-box">Appointment</p>
+        </div>
+      </div>
+    </header>
+
+    <!-- main part  -->
+
+    <main>
+      <!-- first view -->
+
+      <div class="first-view-box">
+        <img src="../code-pic/doctor_pic1.webp" alt="" class="doctor-img" />
+        <div class="quote">
+          <p class="quote-upper">CARING FOR LIFE</p>
+          <p class="quote-heading">Leading The Way in Novaluxe Excellence</p>
+          <p class="quote-lower">Our Services</p>
+        </div>
+      </div>
+
+      <!-- book appointment -->
+
+      <div class="book-box">
+        <div class="book-appointment">
+          <p class="book-message">Book an Appointment</p>
+          <img src="../svg/39.-Calendar.png" alt="calender" />
+        </div>
+        <div class="book-appointment" id="book-appointment-color">
+          <p class="book-message">Book an Appointment</p>
+          <img src="../svg/27.-Team.png" alt="calender" />
+        </div>
+        <div class="book-appointment" id="book-appointment-color2">
+          <p class="book-message">Book an Appointment</p>
+          <img src="../svg/15.-Cash.png" alt="calender" />
+        </div>
+      </div>
+
+      <!-- wellcome message -->
+
+      <div class="wellcome-message">
+        <p class="wellcome-message-quote">
+          <span class="caption">Wellcome to Novaluxe <br /></span>
+          <span class="caption2">A Great Place To Receive Care </span>
+        </p>
+        <p class="wellcome-message-describe">
+          Welcome to Novaluxe, a premier destination for exceptional healthcare. Experience compassionate, state-of-the-art treatments in a sophisticated environment where your well-being and comfort are our highest priorities.
+        </p>
+        <a href="#" class="wellcome-message-learn-a" target="_self"
+          >Learn More <img src="../svg/arrow Vector.png" alt="arrow"
+        /></a>
+      </div>
+      <img src="../code-pic/Group 183.png" alt="" class="home-group-img" />
+
+      <!-- home services -->
+
+      <div class="home-service-box">
+        <p class="home-service-heading">
+          <span class="caption">Care You Can Belive in <br /></span>
+          <span class="caption2">Our Services </span>
+        </p>
+        <div class="home-service-second-box">
+          <div class="home-service-second-left">
+            <div class="left-service-icon-box">
+              <img src="../svg/freeCheck.png" alt="free check up" />
+              <p>Free Checkup</p>
+            </div>
+            <div class="left-service-icon-box" id="left-services-icon-color">
+              <img src="../svg/cardiogram.png" alt="free check up" />
+              <p>Cardiogram</p>
+            </div>
+            <div class="left-service-icon-box">
+              <img src="../svg/dna.png" alt="free check up" />
+              <p>Dna Testing</p>
+            </div>
+            <div class="left-service-icon-box">
+              <img src="../svg/blood-bank.png" alt="free check up" />
+              <p>Blood Bank</p>
+            </div>
+            <div class="left-service-icon-view-all"><p>View All</p></div>
           </div>
-          <div class="header-middle">
-            <ul>
-              <li>hey</li>
-              <li>hey</li>
-              <li>hey</li>
-              <li>hey</li>
+          <div class="home-service-second-middle">
+            <p class="second-service-heading">
+              A passion for putting patients first.
+            </p>
+            <ul class="second-service-list">
+              <li>
+                <div class="second-service-list-dot"></div>
+                <p>A Passion for Healing</p>
+              </li>
+              <li>
+                <div class="second-service-list-dot"></div>
+                <p>5-Star Care</p>
+              </li>
+              <li>
+                <div class="second-service-list-dot"></div>
+                <p>All our best</p>
+              </li>
+              <li>
+                <div class="second-service-list-dot"></div>
+                <p>Belive in Us</p>
+              </li>
+              <li>
+                <div class="second-service-list-dot"></div>
+                <p>A Legacy of Excellence</p>
+              </li>
+              <li>
+                <div class="second-service-list-dot"></div>
+                <p>Always Caring</p>
+              </li>
             </ul>
+            <p class="second-service-explain">
+              Welcome to a place where exceptional care meets compassion. With a passion for putting patients first, 5-star service, and a legacy of excellence, we invite you to believe in us for all your health needs. <br />
+             <br>
+             Our dedicated team combines expertise with empathy to provide the highest quality of care.ur dedicated team combines expertise with empathy to provide the highest quality of care.
+            </p>
           </div>
-          <div class="header-right">
+          <div class="home-service-second-image">
             <img
-              src="../code-pic/icon3.svg"
-              alt="logo"
-              class="header-right-logo"
+              src="../code-pic/home-service.png"
+              alt=""
+              class="home-service-second-img"
             />
             <img
-              src="../code-pic/icon1.svg"
-              alt="logo"
-              class="header-right-logo"     
+              src="../code-pic/home-service2.png"
+              alt=""
+              class="home-service-second-img"
             />
           </div>
         </div>
-      </section>
-    </header>
-    <main>
-      <div class="main-div">
-        <img src="../code-pic/doctor_pic1.webp" alt="pic" class="doctor-img" />
-        <p class="quote">Compassionate Healing, Trusted Medical Care.</p>
-        <p class="describe">
-          Where Compassionate Healing Meets Medical Excellence, Inspiring Hope
-          and Delivering Advanced, Personalized Care to Every Patient, Every
-          Step of the Way. At Novalux Care, we’re dedicated to building a
-          healthier, stronger community through trust, innovation, and heartfelt
-          commitment.
-          <i class="fa-solid fa-clock"></i>
+      </div>
+
+      <!-- our specialties -->
+
+      <div class="specialties-box">
+        <p class="captioin2">
+          <span class="caption">Always Caring</span>
         </p>
       </div>
     </main>
