--- a/codes/hospital-main.html
+++ b/codes/hospital-main.html
@@ -92,7 +92,10 @@
           <span class="caption2">A Great Place To Receive Care </span>
         </p>
         <p class="wellcome-message-describe">
-          Welcome to Novaluxe, a premier destination for exceptional healthcare. Experience compassionate, state-of-the-art treatments in a sophisticated environment where your well-being and comfort are our highest priorities.
+          Welcome to Novaluxe, a premier destination for exceptional healthcare.
+          Experience compassionate, state-of-the-art treatments in a
+          sophisticated environment where your well-being and comfort are our
+          highest priorities.
         </p>
         <a href="#" class="wellcome-message-learn-a" target="_self"
           >Learn More <img src="../svg/arrow Vector.png" alt="arrow"
@@ -158,9 +161,14 @@
               </li>
             </ul>
             <p class="second-service-explain">
-              Welcome to a place where exceptional care meets compassion. With a passion for putting patients first, 5-star service, and a legacy of excellence, we invite you to believe in us for all your health needs. <br />
-             <br>
-             Our dedicated team combines expertise with empathy to provide the highest quality of care.ur dedicated team combines expertise with empathy to provide the highest quality of care.
+              Welcome to a place where exceptional care meets compassion. With a
+              passion for putting patients first, 5-star service, and a legacy
+              of excellence, we invite you to believe in us for all your health
+              needs. <br />
+              <br />
+              Our dedicated team combines expertise with empathy to provide the
+              highest quality of care.ur dedicated team combines expertise with
+              empathy to provide the highest quality of care.
             </p>
           </div>
           <div class="home-service-second-image">
@@ -181,10 +189,65 @@
       <!-- our specialties -->
 
       <div class="specialties-box">
-        <p class="captioin2">
-          <span class="caption">Always Caring</span>
+        <p class="caption2">
+          <span class="caption-specialties">Always Caring <br /></span>
+          Our Specialties
         </p>
+        <div class="specialties-catageory-box">
+          <div class="specialties-catageory">
+            <img src="../svg/specialties.png" alt="img" />
+            <p>Neurology</p>
+          </div>
+          <div class="specialties-catageory" id="specialties-catageory-bones">
+            <img src="../svg/specialities-color.png" alt="img" />
+            <p>Bones</p>
+          </div>
+          <div class="specialties-catageory">
+            <img src="../svg/specialties.png" alt="img" />
+            <p>Oncology</p>
+          </div>
+          <div class="specialties-catageory">
+            <img src="../svg/specialties.png" alt="img" />
+            <p>Otorhinolaryngology</p>
+          </div>
+          <div class="specialties-catageory">
+            <img src="../svg/specialties.png" alt="img" />
+            <p>Ophthalmology</p>
+          </div>
+          <div class="specialties-catageory">
+            <img src="../svg/specialties.png" alt="img" />
+            <p>Cardiovascular</p>
+          </div>
+          <div class="specialties-catageory">
+            <img src="../svg/specialties.png" alt="img" />
+            <p>Pulmonology</p>
+          </div>
+          <div class="specialties-catageory">
+            <img src="../svg/specialties.png" alt="img" />
+            <p>Renal Medicine</p>
+          </div>
+          <div class="specialties-catageory">
+            <img src="../svg/specialties.png" alt="img" />
+            <p>Gastroenterology</p>
+          </div>
+          <div class="specialties-catageory">
+            <img src="../svg/specialties.png" alt="img" />
+            <p>Urology</p>
+          </div>
+          <div class="specialties-catageory">
+            <img src="../svg/specialties.png" alt="img" />
+            <p>Dermatology</p>
+          </div>
+          <div class="specialties-catageory">
+            <img src="../svg/specialties.png" alt="img" />
+            <p>Gynaecology</p>
+          </div>
+        </div>
       </div>
+
+      <!-- book appoinment form -->
+
+      <div class="book-appointment-form-box"></div>
     </main>
   </body>
 </html>
