added about section

--- a/codes/about-us.html
+++ b/codes/about-us.html
@@ -3,12 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Novaluxe</title>
+    <title>About Us</title>
     <link rel="stylesheet" href="hospital-main.css" />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
-    />
+  
   </head>
   <body>
     <header>
@@ -40,13 +37,13 @@
       <div class="nav-bar">
         <ul class="nav-bar-list">
           <li class="nav-bar-items">
-            <span class="home"><a href="#">Home</a></span>
+            <a href="hospital-main.html" target="_blank">Home</a>
           </li>
           <li class="nav-bar-items">
-            <a href="about-us.html" target="_blank">About Us</a>
+            <span class="home"><a href="#">About Us</a></span>
           </li>
           <li class="nav-bar-items">
-            <a href="services.html" target="_blank">Services</a>
+            <a href="services.html" target="_blank">Services </a>
           </li>
           <li class="nav-bar-items"><a href="#" target="_blank">Doctors</a></li>
           <li class="nav-bar-items"><a href="#" target="_blank">News</a></li>
@@ -58,225 +55,80 @@
         </div>
       </div>
     </header>
-
     <!-- main part  -->
-
     <main>
-      <!-- first view -->
+      <!-- main bg -->
 
-      <div class="first-view-box">
-        <img src="../code-pic/doctor_pic1.webp" alt="" class="doctor-img" />
-        <div class="quote">
-          <p class="quote-upper">CARING FOR LIFE</p>
-          <p class="quote-heading">Leading The Way in Novaluxe Excellence</p>
-          <p class="quote-lower">Our Services</p>
-        </div>
-      </div>
-
-      <!-- book appointment -->
-
-      <div class="book-box">
-        <div class="book-appointment">
-          <p class="book-message">Book an Appointment</p>
-          <img src="../svg/39.-Calendar.png" alt="calender" />
-        </div>
-        <div class="book-appointment" id="book-appointment-color">
-          <p class="book-message">Book an Appointment</p>
-          <img src="../svg/27.-Team.png" alt="calender" />
-        </div>
-        <div class="book-appointment" id="book-appointment-color2">
-          <p class="book-message">Book an Appointment</p>
-          <img src="../svg/15.-Cash.png" alt="calender" />
-        </div>
+      <div class="main-bg-div">
+        <p class="main-bg-p">
+          <span>Home / About</span> <br />
+          About Us
+        </p>
       </div>
 
       <!-- wellcome message -->
 
-      <div class="wellcome-message">
-        <p class="wellcome-message-quote">
-          <span class="caption">Wellcome to Novaluxe <br /></span>
-          <span class="caption2">A Great Place To Receive Care </span>
-        </p>
-        <p class="wellcome-message-describe">
-          Welcome to Novaluxe, a premier destination for exceptional healthcare.
-          Experience compassionate, state-of-the-art treatments in a
-          sophisticated environment where your well-being and comfort are our
-          highest priorities.
-        </p>
-        <a href="#" class="wellcome-message-learn-a" target="_self"
-          >Learn More <img src="../svg/arrow Vector.png" alt="arrow"
-        /></a>
-      </div>
-      <img src="../code-pic/Group 183.png" alt="" class="home-group-img" />
-
-      <!-- home services -->
-
-      <div class="home-service-box">
-        <p class="home-service-heading">
-          <span class="caption">Care You Can Belive in <br /></span>
-          <span class="caption2">Our Services </span>
-        </p>
-        <div class="home-service-second-box">
-          <div class="home-service-second-left">
-            <div class="left-service-icon-box">
-              <img src="../svg/freeCheck.png" alt="free check up" />
-              <p>Free Checkup</p>
-            </div>
-            <div class="left-service-icon-box" id="left-services-icon-color">
-              <img src="../svg/cardiogram.png" alt="free check up" />
-              <p>Cardiogram</p>
-            </div>
-            <div class="left-service-icon-box">
-              <img src="../svg/dna.png" alt="free check up" />
-              <p>Dna Testing</p>
-            </div>
-            <div class="left-service-icon-box">
-              <img src="../svg/blood-bank.png" alt="free check up" />
-              <p>Blood Bank</p>
-            </div>
-            <div class="left-service-icon-view-all"><p>View All</p></div>
+      <div class="wellcome-message-main-div">
+        <img src="../code-pic/wellcome-message-pic.png" alt="" />
+        <div class="wellcome-message-box">
+          <div class="wellcome-messaage-heading-box">
+            <p class="caption-specialties">Wellcome To Novaluxe</p>
+            <p class="main-bg-p">Best Care for Yours Good Health</p>
           </div>
-          <div class="home-service-second-middle">
-            <p class="second-service-heading">
-              A passion for putting patients first.
-            </p>
-            <ul class="second-service-list">
-              <li>
-                <div class="second-service-list-dot"></div>
-                <p>A Passion for Healing</p>
-              </li>
-              <li>
-                <div class="second-service-list-dot"></div>
-                <p>5-Star Care</p>
-              </li>
-              <li>
-                <div class="second-service-list-dot"></div>
-                <p>All our best</p>
-              </li>
-              <li>
-                <div class="second-service-list-dot"></div>
-                <p>Belive in Us</p>
-              </li>
-              <li>
-                <div class="second-service-list-dot"></div>
-                <p>A Legacy of Excellence</p>
-              </li>
-              <li>
-                <div class="second-service-list-dot"></div>
-                <p>Always Caring</p>
-              </li>
-            </ul>
-            <p class="second-service-explain">
-              Welcome to a place where exceptional care meets compassion. With a
-              passion for putting patients first, 5-star service, and a legacy
-              of excellence, we invite you to believe in us for all your health
-              needs. <br />
-              <br />
-              Our dedicated team combines expertise with empathy to provide the
-              highest quality of care.ur dedicated team combines expertise with
-              empathy to provide the highest quality of care.
-            </p>
-          </div>
-          <div class="home-service-second-image">
-            <img
-              src="../code-pic/home-service.png"
-              alt=""
-              class="home-service-second-img"
-            />
-            <img
-              src="../code-pic/home-service2.png"
-              alt=""
-              class="home-service-second-img"
-            />
-          </div>
-        </div>
-      </div>
-
-      <!-- our specialties -->
-
-      <div class="specialties-box">
-        <p class="caption2">
-          <span class="caption-specialties">Always Caring <br /></span>
-          Our Specialties
-        </p>
-        <div class="specialties-catageory-box">
-          <div class="specialties-catageory">
-            <img src="../svg/specialties.png" alt="img" />
-            <p>Neurology</p>
-          </div>
-          <div class="specialties-catageory" id="specialties-catageory-bones">
-            <img src="../svg/specialities-color.png" alt="img" />
-            <p>Bones</p>
-          </div>
-          <div class="specialties-catageory">
-            <img src="../svg/specialties.png" alt="img" />
-            <p>Oncology</p>
-          </div>
-          <div class="specialties-catageory">
-            <img src="../svg/specialties.png" alt="img" />
-            <p>Otorhinolaryngology</p>
-          </div>
-          <div class="specialties-catageory">
-            <img src="../svg/specialties.png" alt="img" />
-            <p>Ophthalmology</p>
-          </div>
-          <div class="specialties-catageory">
-            <img src="../svg/specialties.png" alt="img" />
-            <p>Cardiovascular</p>
-          </div>
-          <div class="specialties-catageory">
-            <img src="../svg/specialties.png" alt="img" />
-            <p>Pulmonology</p>
-          </div>
-          <div class="specialties-catageory">
-            <img src="../svg/specialties.png" alt="img" />
-            <p>Renal Medicine</p>
-          </div>
-          <div class="specialties-catageory">
-            <img src="../svg/specialties.png" alt="img" />
-            <p>Gastroenterology</p>
-          </div>
-          <div class="specialties-catageory">
-            <img src="../svg/specialties.png" alt="img" />
-            <p>Urology</p>
-          </div>
-          <div class="specialties-catageory">
-            <img src="../svg/specialties.png" alt="img" />
-            <p>Dermatology</p>
-          </div>
-          <div class="specialties-catageory">
-            <img src="../svg/specialties.png" alt="img" />
-            <p>Gynaecology</p>
-          </div>
-        </div>
-      </div>
-
-      <!-- book appoinment form -->
-
-      <div class="book-appointment-form-box">
-        <div class="book-appointment-form-heading">
-          <p class="caption" id="form-caption-color">Book An Appointment</p>
-          <p class="text-font book-appointment-text-font">
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Provident
-            similique expedita atque quasi tempora eius ipsam aliquam. Saepe
-            ipsam, eaque autem neque libero incidunt cum impedit minima a
-            dignissimos labore?
+          <ul class="second-service-list second-service-list-about-us">
+            <li>
+              <div class="second-service-list-dot"></div>
+              <p>A Passion for Healing</p>
+            </li>
+            <li>
+              <div class="second-service-list-dot"></div>
+              <p>5-Star Care</p>
+            </li>
+            <li>
+              <div class="second-service-list-dot"></div>
+              <p>All our best</p>
+            </li>
+            <li>
+              <div class="second-service-list-dot"></div>
+              <p>Belive in Us</p>
+            </li>
+            <li>
+              <div class="second-service-list-dot"></div>
+              <p>A Legacy of Excellence</p>
+            </li>
+            <li>
+              <div class="second-service-list-dot"></div>
+              <p>Always Caring</p>
+            </li>
+          </ul>
+          <p class="second-service-explain second-service-explain-for-about-us">
+            Welcome to a haven of care where compassion meets excellence. With a steadfast commitment to putting patients first and delivering 5-star service, we’re here to support your health journey with trust and expertise.
+            <br />
+            <br />
+            Our compassionate team unites advanced expertise with genuine care to deliver exceptional healthcare. We are dedicated to ensuring your comfort, trust, and well-being at every stage of your medical journey.
           </p>
         </div>
-        <div class="book-appointment-form">
-          <p class="form-input-p name-border">Name</p>
-          <p class="form-input-p gender-border">Gender</p>
-          <p class="form-input-p">Email</p>
-          <p class="form-input-p">Phone</p>
-          <p class="form-input-p">Date</p>
-          <p class="form-input-p">Time</p>
-          <p class="form-input-p">Doctor</p>
-          <p class="form-input-p">Department</p>
-          <p class="message form-input-p">Message</p>
-          <button class="form-button">Submit</button>
-        </div>
       </div>
 
+      <!-- wellcome quote -->
+
+      <div class="wellcome-quote-div">
+        <div class="about-quote-box">
+          <img src="../svg/quote-pic.png" alt="quote" />
+          <p class="about-quote">
+            Your health is our priority, your trust is our honor, and your
+            journey to wellness is our commitment, driven by compassion,
+            excellence, and a passion for healing every step of the way.
+          </p>
+          <div class="quote-line"></div>
+          <p class="quote-author">Jhon Doe</p>
+          <div class="about-scroll-dot-box">
+            <div class="box-scroll-dot box-scroll-dot-about"></div>
+            <div class="box-scroll-dot box-scroll-dot-about-color"></div>
+            <div class="box-scroll-dot box-scroll-dot-about"></div>
+          </div>
+        </div>
+      </div>
       <!-- doctor profile -->
 
       <div class="doctor-profile-box">
@@ -494,51 +346,52 @@
       </div>
     </main>
 
+    
     <!-- footer -->
 
     <footer>
-      <div class="footer-div">
-        <div class="footer-upper-div">
-          <div class="footer-upper-right-div">
-            <p class="footer-heading">NOVALUXE</p>
-            <p class="footer-content">
-              Leading the Way in Medical Execellence, Trusted Care.
+        <div class="footer-div">
+          <div class="footer-upper-div">
+            <div class="footer-upper-right-div">
+              <p class="footer-heading">NOVALUXE</p>
+              <p class="footer-content">
+                Leading the Way in Medical Execellence, Trusted Care.
+              </p>
+            </div>
+            <div class="footer-upper-imp-link">
+              <p class="imp-link-heading">Important Links</p>
+              <ul>
+                <li>Appointment</li>
+                <li>Doctors</li>
+                <li>Services</li>
+                <li>About Us</li>
+              </ul>
+            </div>
+            <div class="footer-upper-middle-div">
+              <p class="imp-link-heading">Contact Us</p>
+              <ul>
+                <li>Call: (237) 681-812-255</li>
+                <li>Email: fildineesoe@gmail.com</li>
+                <li>Address: 0123 Some place</li>
+                <li>Some country</li>
+              </ul>
+            </div>
+            <div class="footer-upper-left-div">
+              <p class="imp-link-heading">Newsletter</p>
+              <input type="email" placeholder="Enter Your Email Address" />
+            </div>
+          </div>
+          <div class="footer-lower-div">
+            <p class="footer-lower-left-p">
+              © 2021 Hospital’s name All Rights Reserved by PNTEC-LTD
             </p>
-          </div>
-          <div class="footer-upper-imp-link">
-            <p class="imp-link-heading">Important Links</p>
-            <ul>
-              <li>Appointment</li>
-              <li>Doctors</li>
-              <li>Services</li>
-              <li>About Us</li>
-            </ul>
-          </div>
-          <div class="footer-upper-middle-div">
-            <p class="imp-link-heading">Contact Us</p>
-            <ul>
-              <li>Call: (237) 681-812-255</li>
-              <li>Email: fildineesoe@gmail.com</li>
-              <li>Address: 0123 Some place</li>
-              <li>Some country</li>
-            </ul>
-          </div>
-          <div class="footer-upper-left-div">
-            <p class="imp-link-heading">Newsletter</p>
-            <input type="email" placeholder="Enter Your Email Address" />
+            <div class="footer-social-media">
+              <img src="../svg/foot-linkedin.png" alt="" />
+              <img src="../svg/foot-FB.png" alt="" />
+              <img src="../svg/foot-insta.png" alt="" />
+            </div>
           </div>
         </div>
-        <div class="footer-lower-div">
-          <p class="footer-lower-left-p">
-            © 2021 Hospital’s name All Rights Reserved by PNTEC-LTD
-          </p>
-          <div class="footer-social-media">
-            <img src="../svg/foot-linkedin.png" alt="" />
-            <img src="../svg/foot-FB.png" alt="" />
-            <img src="../svg/foot-insta.png" alt="" />
-          </div>
-        </div>
-      </div>
-    </footer>
+      </footer>
   </body>
 </html>
