added about page, doctor page ,and news page

--- a/codes/hospital-main.html
+++ b/codes/hospital-main.html
@@ -43,14 +43,14 @@
             <span class="home"><a href="#">Home</a></span>
           </li>
           <li class="nav-bar-items">
-            <a href="about-us.html" target="_blank">About Us</a>
+            <a href="about-us.html">About Us</a>
           </li>
           <li class="nav-bar-items">
-            <a href="services.html" target="_blank">Services</a>
+            <a href="services.html">Services</a>
           </li>
-          <li class="nav-bar-items"><a href="#" target="_blank">Doctors</a></li>
-          <li class="nav-bar-items"><a href="#" target="_blank">News</a></li>
-          <li class="nav-bar-items"><a href="#" target="_blank">Contact</a></li>
+          <li class="nav-bar-items"><a href="doctors.html">Doctors</a></li>
+          <li class="nav-bar-items"><a href="news.html">News</a></li>
+          <li class="nav-bar-items"><a href="contact.html">Contact</a></li>
         </ul>
         <div class="nav-bar-right">
           <img src="../svg/search.png" alt="" class="nav-bar-search" />
