--- a/codes/services.html
+++ b/codes/services.html
@@ -36,18 +36,18 @@
       <div class="nav-bar">
         <ul class="nav-bar-list">
           <li class="nav-bar-items">
-            <a href="#" target="_blank">Home</a>
+            <a href="hospital-main.html">Home</a>
           </li>
           <li class="nav-bar-items">
-            <a href="about-us.html" target="_blank">About Us</a>
+            <a href="about-us.html">About Us</a>
           </li>
           <li class="nav-bar-items">
             <span class="home"><a href="#">Services</a></span>
           </li>
 
-          <li class="nav-bar-items"><a href="#" target="_blank">Doctors</a></li>
-          <li class="nav-bar-items"><a href="#" target="_blank">News</a></li>
-          <li class="nav-bar-items"><a href="#" target="_blank">Contact</a></li>
+          <li class="nav-bar-items"><a href="doctors.html">Doctors</a></li>
+          <li class="nav-bar-items"><a href="news.html">News</a></li>
+          <li class="nav-bar-items"><a href="contact.html">Contact</a></li>
         </ul>
         <div class="nav-bar-right">
           <img src="../svg/search.png" alt="" class="nav-bar-search" />
@@ -55,5 +55,215 @@
         </div>
       </div>
     </header>
+
+    <main>
+      <!-- service main bg -->
+      <div class="main-bg-div service-bg-div">
+        <p class="main-bg-p">
+          <span>Home / Services</span> <br />
+          Our Services
+        </p>
+      </div>
+
+      <!-- hospitali services -->
+
+      <div class="hospital-services-main-box">
+        <div class="check-up-box check-up-box-bg-blur">
+          <div class="img-with-bg">
+            <img src="../svg/services-bandage.png" alt="" />
+          </div>
+          <div class="free-check-up-discription">
+            <p class="free-check-up-heading">Free Checkup</p>
+            <p class="free-check-describe">
+              Lorem ipsum dolor sit amet, consectetur adipiscing Quisque
+              placerat Convallis felis vitae tortor augue. Velit nascetur massa
+              in.
+            </p>
+            <p class="learn-more-free-check">Learn More</p>
+          </div>
+        </div>
+        <div class="check-up-box">
+          <img src="../code-pic/free-services-pic.png" alt="img" />
+          <img
+            src="../svg/bandage-logo-withBG.png"
+            alt="img"
+            class="checkup-bandage-logo"
+          />
+          <div class="free-check-up-discription">
+            <p class="free-check-up-heading">Free Checkup</p>
+            <p class="free-check-describe">
+              Lorem ipsum dolor sit amet, consectetur adipiscing Quisque
+              placerat Convallis felis vitae tortor augue. Velit nascetur massa
+              in.
+            </p>
+            <p class="learn-more-free-check">Learn More</p>
+          </div>
+        </div>
+        <div class="check-up-box">
+          <img src="../code-pic/free-services-pic.png" alt="img" />
+          <img
+            src="../svg/bandage-logo-withBG.png"
+            alt="img"
+            class="checkup-bandage-logo"
+          />
+          <div class="free-check-up-discription">
+            <p class="free-check-up-heading">Free Checkup</p>
+            <p class="free-check-describe">
+              Lorem ipsum dolor sit amet, consectetur adipiscing Quisque
+              placerat Convallis felis vitae tortor augue. Velit nascetur massa
+              in.
+            </p>
+            <p class="learn-more-free-check">Learn More</p>
+          </div>
+        </div>
+        <div class="check-up-box">
+          <img src="../code-pic/free-services-pic.png" alt="img" />
+          <img
+            src="../svg/bandage-logo-withBG.png"
+            alt="img"
+            class="checkup-bandage-logo"
+          />
+          <div class="free-check-up-discription">
+            <p class="free-check-up-heading">Free Checkup</p>
+            <p class="free-check-describe">
+              Lorem ipsum dolor sit amet, consectetur adipiscing Quisque
+              placerat Convallis felis vitae tortor augue. Velit nascetur massa
+              in.
+            </p>
+            <p class="learn-more-free-check">Learn More</p>
+          </div>
+        </div>
+        <div class="check-up-box">
+          <img src="../code-pic/free-services-pic.png" alt="img" />
+          <img
+            src="../svg/bandage-logo-withBG.png"
+            alt="img"
+            class="checkup-bandage-logo"
+          />
+          <div class="free-check-up-discription">
+            <p class="free-check-up-heading">Free Checkup</p>
+            <p class="free-check-describe">
+              Lorem ipsum dolor sit amet, consectetur adipiscing Quisque
+              placerat Convallis felis vitae tortor augue. Velit nascetur massa
+              in.
+            </p>
+            <p class="learn-more-free-check">Learn More</p>
+          </div>
+        </div>
+        <div class="check-up-box">
+          <img src="../code-pic/free-services-pic.png" alt="img" />
+          <img
+            src="../svg/bandage-logo-withBG.png"
+            alt="img"
+            class="checkup-bandage-logo"
+          />
+          <div class="free-check-up-discription">
+            <p class="free-check-up-heading">Free Checkup</p>
+            <p class="free-check-describe">
+              Lorem ipsum dolor sit amet, consectetur adipiscing Quisque
+              placerat Convallis felis vitae tortor augue. Velit nascetur massa
+              in.
+            </p>
+            <p class="learn-more-free-check">Learn More</p>
+          </div>
+        </div>
+      </div>
+
+      
+      <!-- contact -->
+
+      <div class="contact-main-div">
+        <p class="caption caption-specialties">
+          GET IN TOUCH <br />
+          <br />
+          <span class="caption2">Contact</span>
+        </p>
+        <div class="contact-sub-div">
+          <div class="contact-box">
+            <div class="contact-item">
+              <img src="../svg/Emergency.png" alt="" />
+              <p class="doctor-profile-spicification">Emergency</p>
+              <p class="doctor-profile-name">(237) 681-812-255</p>
+              <p class="doctor-profile-name">(237) 666-331-894</p>
+            </div>
+          </div>
+          <div class="contact-box contact-box-color">
+            <div class="contact-item">
+              <img src="../svg/location.png" alt="" />
+              <p class="doctor-profile-spicification">Emergency</p>
+              <p class="doctor-profile-name" id="contact-box-item-color">
+                0123 Some place
+              </p>
+              <p class="doctor-profile-name" id="contact-box-item-color">
+                9876 Some country
+              </p>
+            </div>
+          </div>
+          <div class="contact-box">
+            <div class="contact-item">
+              <img src="../svg/mail.png" alt="" />
+              <p class="doctor-profile-spicification">Email</p>
+              <p class="doctor-profile-name">fildineeesoe@gmil.com</p>
+              <p class="doctor-profile-name">myebstudios@gmail.com</p>
+            </div>
+          </div>
+          <div class="contact-box">
+            <div class="contact-item contact-item-size">
+              <img src="../svg/working-hour.png" alt="" />
+              <p class="doctor-profile-spicification">Working Hours</p>
+              <p class="contact-name">Mon-Sat 09:00-20:00</p>
+              <p class="contact-name">Sunday Emergency only</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </main>
+
+       <!-- footer -->
+
+       <footer>
+        <div class="footer-div">
+          <div class="footer-upper-div">
+            <div class="footer-upper-right-div">
+              <p class="footer-heading">NOVALUXE</p>
+              <p class="footer-content">
+                Leading the Way in Medical Execellence, Trusted Care.
+              </p>
+            </div>
+            <div class="footer-upper-imp-link">
+              <p class="imp-link-heading">Important Links</p>
+              <ul>
+                <li>Appointment</li>
+                <li>Doctors</li>
+                <li>Services</li>
+                <li>About Us</li>
+              </ul>
+            </div>
+            <div class="footer-upper-middle-div">
+              <p class="imp-link-heading">Contact Us</p>
+              <ul>
+                <li>Call: (237) 681-812-255</li>
+                <li>Email: fildineesoe@gmail.com</li>
+                <li>Address: 0123 Some place</li>
+                <li>Some country</li>
+              </ul>
+            </div>
+            <div class="footer-upper-left-div">
+              <p class="imp-link-heading">Newsletter</p>
+              <input type="email" placeholder="Enter Your Email Address" />
+            </div>
+          </div>
+          <div class="footer-lower-div">
+            <p class="footer-lower-left-p">
+              © 2021 Hospital’s name All Rights Reserved by PNTEC-LTD
+            </p>
+            <div class="footer-social-media">
+              <img src="../svg/foot-linkedin.png" alt="" />
+              <img src="../svg/foot-FB.png" alt="" />
+              <img src="../svg/foot-insta.png" alt="" />
+            </div>
+          </div>
+        </div>
+      </footer>
   </body>
 </html>
