--- a/codes/doctors.html
+++ b/codes/doctors.html
@@ -3,9 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>About Us</title>
+    <title>Doctors</title>
     <link rel="stylesheet" href="hospital-main.css" />
-  
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
+    />
   </head>
   <body>
     <header>
@@ -36,16 +39,17 @@
 
       <div class="nav-bar">
         <ul class="nav-bar-list">
+          <li class="nav-bar-items"><a href="hospital-main.html">Home</a></li>
           <li class="nav-bar-items">
-            <a href="hospital-main.html">Home</a>
+            <a href="about-us.html">About Us</a>
           </li>
           <li class="nav-bar-items">
-            <span class="home"><a href="#">About Us</a></span>
+            <a href="services.html">Services</a>
           </li>
+
           <li class="nav-bar-items">
-            <a href="services.html">Services </a>
+            <span class="home"><a href="#">Doctors</a></span>
           </li>
-          <li class="nav-bar-items"><a href="doctors.html">Doctors</a></li>
           <li class="nav-bar-items"><a href="news.html">News</a></li>
           <li class="nav-bar-items"><a href="contact.html">Contact</a></li>
         </ul>
@@ -55,58 +59,121 @@
         </div>
       </div>
     </header>
-    <!-- main part  -->
+
     <main>
       <!-- main bg -->
 
       <div class="main-bg-div">
         <p class="main-bg-p">
-          <span>Home / About</span> <br />
-          About Us
+          <span>Home / Doctors</span> <br />
+          Our Doctors
         </p>
       </div>
 
-      <!-- wellcome message -->
+      <!-- doctors-profile -->
 
-      <div class="wellcome-message-main-div">
-        <img src="../code-pic/wellcome-message-pic.png" alt="" />
-        <div class="wellcome-message-box">
-          <div class="wellcome-messaage-heading-box">
-            <p class="caption-specialties">Wellcome To Novaluxe</p>
-            <p class="main-bg-p">Best Care for Yours Good Health</p>
+      <div class="doctors-page-profile">
+        <div class="doctor-profile-pic-box">
+          <img
+            src="../code-pic/doctor 4.png"
+            alt="doctor img"
+            class="doctor-profile-img"
+          />
+          <div class="doctor-profile-info">
+            <p class="doctor-profile-name">Edward Jenner</p>
+            <p class="doctor-profile-spicification">NEUROLOGY</p>
+            <div class="doctor-social-media">
+              <img src="../svg/linkedin.png" alt="img" class="social-media" />
+              <img src="../svg/facebook.png" alt="img" class="social-media" />
+              <img src="../svg/insta.png" alt="img" class="social-media" />
+            </div>
           </div>
-          <ul class="second-service-list second-service-list-about-us">
-            <li>
-              <div class="second-service-list-dot"></div>
-              <p>A Passion for Healing</p>
-            </li>
-            <li>
-              <div class="second-service-list-dot"></div>
-              <p>5-Star Care</p>
-            </li>
-            <li>
-              <div class="second-service-list-dot"></div>
-              <p>All our best</p>
-            </li>
-            <li>
-              <div class="second-service-list-dot"></div>
-              <p>Belive in Us</p>
-            </li>
-            <li>
-              <div class="second-service-list-dot"></div>
-              <p>A Legacy of Excellence</p>
-            </li>
-            <li>
-              <div class="second-service-list-dot"></div>
-              <p>Always Caring</p>
-            </li>
-          </ul>
-          <p class="second-service-explain second-service-explain-for-about-us">
-            Welcome to a haven of care where compassion meets excellence. With a steadfast commitment to putting patients first and delivering 5-star service, we’re here to support your health journey with trust and expertise.
-            <br />
-            <br />
-            Our compassionate team unites advanced expertise with genuine care to deliver exceptional healthcare. We are dedicated to ensuring your comfort, trust, and well-being at every stage of your medical journey.
-          </p>
+          <div class="doctor-view-profile">View Profile</div>
+        </div>
+        <div class="doctor-profile-pic-box">
+          <img
+            src="../code-pic/doctor-5.png"
+            alt="doctor img"
+            class="doctor-profile-img"
+          />
+          <div class="doctor-profile-info">
+            <p class="doctor-profile-name">William A Abdu</p>
+            <p class="doctor-profile-spicification">NEUROLOGY</p>
+            <div class="doctor-social-media">
+              <img src="../svg/linkedin.png" alt="img" class="social-media" />
+              <img src="../svg/facebook.png" alt="img" class="social-media" />
+              <img src="../svg/insta.png" alt="img" class="social-media" />
+            </div>
+          </div>
+          <div class="doctor-view-profile">View Profile</div>
+        </div>
+        <div class="doctor-profile-pic-box">
+          <img
+            src="../code-pic/doctor6.png"
+            alt="doctor img"
+            class="doctor-profile-img"
+          />
+          <div class="doctor-profile-info">
+            <p class="doctor-profile-name">Marie Curie</p>
+            <p class="doctor-profile-spicification">NEUROLOGY</p>
+            <div class="doctor-social-media">
+              <img src="../svg/linkedin.png" alt="img" class="social-media" />
+              <img src="../svg/facebook.png" alt="img" class="social-media" />
+              <img src="../svg/insta.png" alt="img" class="social-media" />
+            </div>
+          </div>
+          <div class="doctor-view-profile">View Profile</div>
+        </div>
+        <div class="doctor-profile-pic-box">
+          <img
+            src="../code-pic/doctor 4.png"
+            alt="doctor img"
+            class="doctor-profile-img"
+          />
+          <div class="doctor-profile-info">
+            <p class="doctor-profile-name">Edward Jenner</p>
+            <p class="doctor-profile-spicification">NEUROLOGY</p>
+            <div class="doctor-social-media">
+              <img src="../svg/linkedin.png" alt="img" class="social-media" />
+              <img src="../svg/facebook.png" alt="img" class="social-media" />
+              <img src="../svg/insta.png" alt="img" class="social-media" />
+            </div>
+          </div>
+          <div class="doctor-view-profile">View Profile</div>
+        </div>
+        <div class="doctor-profile-pic-box">
+          <img
+            src="../code-pic/doctor-5.png"
+            alt="doctor img"
+            class="doctor-profile-img"
+          />
+          <div class="doctor-profile-info">
+            <p class="doctor-profile-name">William A Abdu</p>
+            <p class="doctor-profile-spicification">NEUROLOGY</p>
+            <div class="doctor-social-media">
+              <img src="../svg/linkedin.png" alt="img" class="social-media" />
+              <img src="../svg/facebook.png" alt="img" class="social-media" />
+              <img src="../svg/insta.png" alt="img" class="social-media" />
+            </div>
+          </div>
+          <div class="doctor-view-profile">View Profile</div>
+        </div>
+        <div class="doctor-profile-pic-box">
+          <img
+            src="../code-pic/doctor6.png"
+            alt="doctor img"
+            class="doctor-profile-img"
+          />
+          <div class="doctor-profile-info">
+            <p class="doctor-profile-name">Marie Curie</p>
+            <p class="doctor-profile-spicification">NEUROLOGY</p>
+            <div class="doctor-social-media">
+              <img src="../svg/linkedin.png" alt="img" class="social-media" />
+              <img src="../svg/facebook.png" alt="img" class="social-media" />
+              <img src="../svg/insta.png" alt="img" class="social-media" />
+            </div>
+          </div>
+          <div class="doctor-view-profile">View Profile</div>
         </div>
       </div>
 
@@ -129,76 +196,10 @@
           </div>
         </div>
       </div>
-      <!-- doctor profile -->
-
-      <div class="doctor-profile-box">
-        <p class="caption2 our-doctors">
-          <span class="caption-specialties">Trusted Care<br /></span>
-          Our Doctors
-        </p>
-        <div class="doctor-profile-info-box">
-          <div class="doctor-profile-pic-box">
-            <img
-              src="../code-pic/doctor 4.png"
-              alt="doctor img"
-              class="doctor-profile-img"
-            />
-            <div class="doctor-profile-info">
-              <p class="doctor-profile-name">Edward Jenner</p>
-              <p class="doctor-profile-spicification">NEUROLOGY</p>
-              <div class="doctor-social-media">
-                <img src="../svg/linkedin.png" alt="img" class="social-media" />
-                <img src="../svg/facebook.png" alt="img" class="social-media" />
-                <img src="../svg/insta.png" alt="img" class="social-media" />
-              </div>
-            </div>
-            <div class="doctor-view-profile">View Profile</div>
-          </div>
-          <div class="doctor-profile-pic-box">
-            <img
-              src="../code-pic/doctor-5.png"
-              alt="doctor img"
-              class="doctor-profile-img"
-            />
-            <div class="doctor-profile-info">
-              <p class="doctor-profile-name">William A Abdu</p>
-              <p class="doctor-profile-spicification">NEUROLOGY</p>
-              <div class="doctor-social-media">
-                <img src="../svg/linkedin.png" alt="img" class="social-media" />
-                <img src="../svg/facebook.png" alt="img" class="social-media" />
-                <img src="../svg/insta.png" alt="img" class="social-media" />
-              </div>
-            </div>
-            <div class="doctor-view-profile">View Profile</div>
-          </div>
-          <div class="doctor-profile-pic-box">
-            <img
-              src="../code-pic/doctor6.png"
-              alt="doctor img"
-              class="doctor-profile-img"
-            />
-            <div class="doctor-profile-info">
-              <p class="doctor-profile-name">Marie Curie</p>
-              <p class="doctor-profile-spicification">NEUROLOGY</p>
-              <div class="doctor-social-media">
-                <img src="../svg/linkedin.png" alt="img" class="social-media" />
-                <img src="../svg/facebook.png" alt="img" class="social-media" />
-                <img src="../svg/insta.png" alt="img" class="social-media" />
-              </div>
-            </div>
-            <div class="doctor-view-profile">View Profile</div>
-          </div>
-        </div>
-        <div class="profile-scroll-box">
-          <div class="box-scroll-dot"></div>
-          <div class="box-scroll-dot box-scroll-dot-color"></div>
-          <div class="box-scroll-dot"></div>
-        </div>
-      </div>
 
       <!-- news -->
 
-      <div class="home-news-main-box">
+      <div class="home-news-main-box home-news-main-box-for-doctors">
         <p class="caption caption-specialties">
           BETTER INFORMATION , BETTER HEALTH <br />
           <br />
@@ -344,12 +345,10 @@
           </div>
         </div>
       </div>
-    </main>
 
-    
-    <!-- footer -->
+      <!-- footer -->
 
-    <footer>
+      <footer>
         <div class="footer-div">
           <div class="footer-upper-div">
             <div class="footer-upper-right-div">
@@ -393,5 +392,6 @@
           </div>
         </div>
       </footer>
+    </main>
   </body>
 </html>
